# rust-wasm-app-template

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
web/: index.html
